full js functionality and validated

--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -20,6 +20,13 @@
         <li class="nav-item"><a href=index.html class="link current">PRODUCTS</a></li>
         <li class="nav-item">
           <a href="#cart" class="link">CART</a><br>
+
+          <!-- cart pop up -->
+          <div id="cart-popup">
+            <p id="cart-popup-msg"></p>
+          </div>
+
+          <!-- cart info (item total and price) -->
           <div class="cart-info">
             <span id="cart-count">0</span> item(s)<br>
             Total: $<span id="cart-total">0.00</span>
