--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8">
@@ -10,10 +9,8 @@
       <li><a href="solution-hw1">Homework Assignment 1</a></li>
       <li><a href="solution-hw2">Homework Assignment 2</a></li>
       <li><a href="solution-hw3">Homework Assignment 3</a></li>
+      <li><a href="solution-hw4">Homework Assignment 4</a></li>
     </ul>
 
   </body>
 </html>
-=======
-<head><script defer="defer" src="/archen-pui-advanced-hw/static/js/main.9061a2cb.js"></script><link href="/archen-pui-advanced-hw/static/css/main.8fca2afe.css" rel="stylesheet"></head><div id="root"></div>
->>>>>>> gh-pages
